[gd_scene load_steps=5 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 13.9496 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 5.76309 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 11.4772, 10.5335 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
"resettable",
]]
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="FloorDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="FloorDetector"]
position = Vector2( -0.140312, 14.1711 )
shape = SubResource( 2 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( -7.62939e-06, -0.280617 )
shape = SubResource( 3 )

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_HurtBox_body_entered"]
